feat: includes ENV variables example file and add env variables in api url

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=6dNfQS/VXLLwD34bYK52WTd8p+WNF7/r1zwS+WnQm7E=
+
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8183
+API_BASE_URL=http://localhost:8183
